# yazilimTestIzlemeAraci_2

./: README.md
backend/: alembic.ini  requirements.txt
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  runs.py  samples.py  stats.py
backend/migrations/: env.py
backend/migrations/versions/: 20240506_0001_create_tables.py  40995412eaed_change_started_at_default_to_app_side_.py  5a83dd831d49_change_started_at_default_to_app_side_.py
cli/: cpu_test.py  pyproject.toml  requirements.txt  test.yml
cli/bizim_performans_araci/: cli.py
cli/bizim_performans_araci.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Compare.jsx  RunDetail.jsx  RunList.jsx
